# shspec

./: .gitignore  Makefile.am  README.md  configure.ac
build-aux/: vergen
doc/: .gitignore  Makefile.am  shspec.texi
src/: cli  common  expect-core  expect.sh  run-spec  runner  spec  spec.sh  specstack.sh  util  util.sh
src/expect/: env.sh  output  output.sh
test/: test-expect-core  test-expect-env  test-spec  test-util
